--- a/README
+++ b/README
@@ -26,7 +26,8 @@ Mineos.
 
 The manual is at doc/mineos.pdf.
 
-Please report any bugs by opening an issue in the project's github repository at geodynamics/mineos.
+Please report any bugs by opening an issue in the project's GitHub repository at geodynamics/mineos.
+
 If you have any questions about the software, please post on the CIG forums at:
     https://community.geodynamics.org/
 
